<resources>
    <string name="app_name">TestAssistant</string>
    <string name="start_new_test">Start New Test</string>
    <string name="resume_test">Resume Test</string>
    <string name="tester_info">Tester Info</string>
    <string name="manage_test_plan">Manage Test Plan</string>
    <string name="please_select_test_plan">Please Select Test Plan</string>
    <string name="test_info">Test Info</string>
    <string name="test_name">Test Name</string>
    <string name="tester">Tester</string>
    <string name="email">Email</string>
    <string name="proceed_test">Proceed Test</string>
    <string name="alert_title_add_test_plan">Add Test Plan Status</string>
    <string name="alert_message_test_plan_key_exist">Test plan with the same name already exists, cannot add test plan</string>
    <string name="alert_message_test_plan_overflow">Cannot add test plan due to maximum number of test plan</string>
    <string name="alert_message_test_plan_file_stream_error">Cannot add test plan due to file stream error</string>
</resources>
