<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaTestInfoFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/testInfoLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:text="@string/test_info"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

        <EditText
            android:id="@+id/testInfoTestName"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="112dp"
            android:ems="10"
            android:hint="@string/test_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/testInfoTester"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/testInfoTestName"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@id/testInfoTestName"
            android:layout_marginTop="189dp"
            android:ems="10"
            android:hint="@string/tester"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/testInfoEmail"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/testInfoTester"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@id/testInfoTester"
            android:layout_marginTop="266dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <Spinner
            android:id="@+id/testInfoTestPlanList"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="343dp"
            android:prompt="@string/please_select_test_plan"
            android:spinnerMode="dialog" />

        <Button
            android:id="@+id/testInfoProceedTest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/testInfoTestName"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="68dp"
            android:text="@string/proceed_test" />

        <Button
            android:id="@+id/testInfoManageTestPlan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/testInfoTestName"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="68dp"
            android:text="@string/manage_test_plan" />

    </RelativeLayout>
</FrameLayout>